<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Delta Chat</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_search">Clear Search</string>
    <string name="link">Link</string>
    <string name="scan">Scan</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select">Select</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="def">Default</string>
    <string name="default_value">Default (%1$s)</string>
    <string name="custom">Custom</string>
    <string name="none">None</string>
    <string name="automatic">Automatic</string>
    <string name="strict">Strict</string>
    <string name="open">Open</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="open_attachment">Open Attachment</string>
    <string name="join">Join</string>
    <string name="join_group">Join Group</string>
    <string name="join_channel">Join Channel</string>
    <string name="rejoin">Rejoin</string>
    <string name="delete">Delete</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="info">Info</string>
    <string name="update">Update</string>
    <string name="emoji">Emoji</string>
    <string name="attachment">Attachment</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="close_window">Close Window</string>
    <string name="forward">Forward</string>
    <string name="create">Create</string>
    <string name="reset">Reset</string>
    <string name="later">Later</string>
    <string name="resend">Resend</string>
    <string name="edited">Edited</string>
    <string name="edit_message">Edit Message</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="mute">Mute</string>
    <string name="muted">Muted</string>
    <string name="ephemeral_messages">Disappearing Messages</string>
    <string name="ephemeral_messages_hint">Applies to all members of this chat; they can still copy, save, and forward messages.</string>
    <string name="save">Save</string>
    <string name="chat">Chat</string>
    <string name="media">Media</string>
    <string name="apps_and_media">Apps &amp; Media</string>
    <string name="profile">Profile</string>
    <string name="all_profiles">All Profiles</string>
    <string name="current_profile">Current Profile</string>
    <string name="main_menu">Main Menu</string>
    <string name="start_chat">Start Chat</string>
    <string name="show_full_message">Show Full Message…</string>
    <string name="mark_all_as_read">Mark All as Read</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="mark_as_read_short">Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="mark_as_unread_short">Unread</string>
    <string name="loading">Loading…</string>
    <string name="hide">Hide</string>
    <string name="activate">Activate</string>
    <string name="load_remote_content">Load Remote Images</string>
    <string name="load_remote_content_ask">Remote images can track you.\n\nThis setting also may load fonts and other content. If disabled, embedded or cached images may appear.\n\nLoad remote images?</string>
    <string name="always">Always</string>
    <string name="always_load_remote_images">Always Load Remote Images</string>
    <string name="once">Once</string>
    <string name="show_warning">Show Warning</string>
    <string name="not_now">Not now</string>
    <string name="never">Never</string>
    <string name="one_moment">One moment…</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="offline">Offline</string>
    <string name="next">Next</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="error_x">Error: %1$s</string>
    <string name="no_app_to_handle_data">Can\'t find an app to handle this type of data.</string>
    <string name="no_browser_installed">No browser installed.</string>
    <string name="file_not_found">Could not find %1$s.</string>
    <string name="cannot_save_file">Cannot save %1$s.</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="contacts_headline">Contacts</string>
    <string name="email_address">Email Address</string>
    <string name="bad_email_address">Bad email address.</string>
    <string name="password">Password</string>
    <string name="existing_password">Existing Password</string>
    <string name="now">Now</string>
    <string name="danger">Danger</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="last_seen_at">Last seen at %1$s</string>
    <string name="last_seen_relative">Last seen %1$s</string>
    <string name="last_seen_unknown">Last seen: Unknown</string>
    <string name="seen_recently">Seen recently</string>
    <string name="seen_today">Seen today</string>
    <string name="seen_yesterday">Seen yesterday</string>
    <string name="seen_within_week">Seen within a week</string>
    <string name="seen_within_month">Seen within a month</string>
    <plurals name="seen_n_months_ago">
        <item quantity="one">Seen %d month ago</item>
        <item quantity="other">Seen %d months ago</item>
    </plurals>
    <string name="seen_long_ago">Seen a long time ago</string>
    <string name="never_seen">Never seen</string>
    <plurals name="seen_n_years_ago">
        <item quantity="one">Seen %d year ago</item>
        <item quantity="other">Seen %d years ago</item>
    </plurals>
    <plurals name="call_duration_minutes">
        <item quantity="one">%d minute duration</item>
        <item quantity="other">%d minutes duration</item>
    </plurals>
    <string name="call_duration_less_than_a_minute">Less than 1 minute</string>
    <plurals name="n_minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d min</item>
    </plurals>
    <plurals name="n_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="n_chats">
        <item quantity="one">%d chat</item>
        <item quantity="other">%d chats</item>
    </plurals>
    <string name="webxdc_store_url">App Picker URL</string>
    <string name="menu_new_chat">New Chat</string>
    <string name="clone_chat">Clone Chat</string>
    <string name="channels">Channels</string>
    <string name="menu_group_name_and_image">Group Name and Image</string>
    <string name="menu_show_global_map">All Locations</string>
    <string name="menu_archive_chat">Archive Chat</string>
    <string name="menu_add_attachment">Add Attachment</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_message_details">Message Info</string>
    <string name="menu_copy_to_clipboard">Copy to Clipboard</string>
    <string name="menu_forward">Forward Message</string>
    <string name="menu_reply">Reply to Message</string>
    <string name="menu_mute">Mute Notifications</string>
    <string name="menu_export_attachment">Export Attachment</string>
    <string name="menu_export_attachments">Export Attachments</string>
    <string name="menu_all_media">All Media</string>
    <string name="show_in_chat">Show in Chat</string>
    <string name="menu_share">Share</string>
    <string name="menu_block_contact">Block Contact</string>
    <string name="menu_scroll_to_bottom">Scroll to the Bottom</string>
    <string name="menu_scroll_to_top">Scroll to the Top</string>
    <string name="menu_help">Help</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_advanced">Advanced</string>
    <string name="menu_view_profile">View Profile</string>
    <string name="menu_zoom_in">Zoom In</string>
    <string name="menu_zoom_out">Zoom Out</string>
    <string name="menu_save_log">Save Log</string>
    <string name="pin_chat">Pin Chat</string>
    <string name="reply_privately">Reply Privately</string>
    <string name="add_to_home_screen">Add to Home Screen</string>
    <string name="search">Search</string>
    <string name="profile_encryption">Encryption</string>
    <string name="manual_account_setup_option">Use Classic Email as Relay</string>
    <string name="instant_onboarding_other_server">List Chatmail Servers</string>
    <string name="scan_invitation_code">Scan Invitation Code</string>
    <string name="proxy_settings">Proxy</string>
    <string name="transports">Relays</string>
    <string name="switch_account">Switch Profile</string>
    <string name="pref_blocked_contacts">Blocked Contacts</string>
    <string name="pref_enter_sends">Enter Key Sends</string>
    <string name="pref_enter_sends_explain">Pressing the Enter key will send text messages</string>
    <string name="pref_outgoing_media_quality">Outgoing Media Quality</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_screen_security">Screen Security</string>
    <string name="pref_screen_security_explain">Request to block screenshots in the recents list and inside the app</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_show">Show</string>
    <string name="pref_notifications_priority">Priority</string>
    <string name="pref_led_color">LED Color</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_privacy">Privacy</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_language">Language</string>
    <string name="pref_incognito_keyboard">Incognito Keyboard</string>
    <string name="pref_incognito_keyboard_explain">Request keyboard to disable personalized learning</string>
    <string name="pref_read_receipts">Read Receipts</string>
    <string name="pref_read_receipts_explain">If read receipts are disabled, you won\'t be able to see read receipts from others.</string>
    <string name="pref_server">Server</string>
    <string name="pref_chats">Chats</string>
    <string name="pref_in_chat_sounds">In-Chat Sounds</string>
    <string name="pref_view_log">View Log</string>
    <string name="pref_other">Other</string>
    <string name="pref_backup">Backup</string>
    <string name="pref_backup_explain">Back Up Chats to External Storage</string>
    <string name="pref_background">Wallpaper</string>
    <string name="pref_multidevice">Multi-Device Mode</string>
    <string name="pref_multidevice_explain">Synchronize your messages with your other devices. Automatically enabled on adding a second device</string>
    <string name="pref_auto_folder_moves">Move automatically to DeltaChat Folder</string>
    <string name="pref_only_fetch_mvbox_title">Only Fetch from DeltaChat Folder</string>
    <string name="pref_show_emails">Show Classic Emails</string>
    <string name="pref_experimental_features">Experimental Features</string>
    <string name="pref_experimental_features_explain">These features may be unstable and may be changed or removed</string>
    <string name="pref_on_demand_location_streaming">Location Streaming</string>
    <string name="send_stats_to_devs">Send statistics to Delta Chat\'s developers</string>
    <string name="qr_code">QR Code</string>
    <string name="global_menu_edit_desktop">Edit</string>
</resources>