<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/global_menu_edit_desktop"
          android:id="@+id/edit_name"
          app:showAsAction="never"/>

    <item android:title="@string/menu_copy_to_clipboard"
        android:id="@+id/copy_addr_to_clipboard"
        app:showAsAction="never"/>

    <item android:title="@string/menu_mute"
        android:id="@+id/menu_mute_notifications"
        app:showAsAction="never"/>

    <item android:title="@string/pref_sound"
        android:id="@+id/menu_sound"
        app:showAsAction="never"/>

    <item android:title="@string/pref_vibrate"
        android:id="@+id/menu_vibrate"
        app:showAsAction="never"/>

    <item android:title="@string/profile_encryption"
        android:id="@+id/show_encr_info"
        app:showAsAction="never"/>

    <item android:title="@string/menu_block_contact"
        android:id="@+id/block_contact"
        app:showAsAction="never"/>

    <item android:title="@string/clone_chat"
        android:id="@+id/menu_clone"
        app:showAsAction="never"/>

</menu>
