<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/details"
	android:title="@string/menu_message_details"
        android:icon="?menu_info_icon"
        app:showAsAction="always"/>

    <item android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always"/>

    <item android:id="@+id/share"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always" />

    <item android:id="@+id/menu_add_to_home_screen"
        android:title="@string/add_to_home_screen"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/show_in_chat"
        android:title="@string/show_in_chat"
        app:showAsAction="never"/>

    <item android:id="@+id/save"
        android:title="@string/menu_export_attachments"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_resend"
        android:title="@string/resend"
        app:showAsAction="never" />

    <item android:id="@+id/menu_select_all"
        android:title="@string/menu_select_all"
        app:showAsAction="never" />
</menu>
