<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/save_log"
        android:title="@string/menu_save_log" />
    <item android:title="@string/menu_copy_to_clipboard"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:id="@+id/copy_log_to_clipboard"
        app:showAsAction="ifRoom" />
    <item android:title="@string/menu_zoom_in"
        android:id="@+id/log_zoom_in" />
    <item android:title="@string/menu_zoom_out"
        android:id="@+id/log_zoom_out" />
    <item android:title="@string/menu_scroll_to_top"
          android:id="@+id/log_scroll_up" />
    <item android:title="@string/menu_scroll_to_bottom"
        android:id="@+id/log_scroll_down" />

</menu>
