<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/qr_code"
          android:id="@+id/menu_qr"
          android:icon="@drawable/baseline_qr_code_24"
          app:showAsAction="always"/>

    <item android:title="@string/menu_new_chat"
          android:id="@+id/menu_new_chat" />

    <item android:title="@string/menu_all_media"
        android:id="@+id/menu_all_media" />

    <item android:title="@string/menu_show_global_map"
        android:id="@+id/menu_global_map"
        android:visible="false"
        />

    <item android:title="@string/menu_settings"
          android:id="@+id/menu_settings" />

    <item android:title="@string/switch_account"
        android:id="@+id/menu_switch_account" />

</menu>
