<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/pin_chat"
          android:id="@+id/menu_pin_selected"
          android:icon="@drawable/ic_pin_white"
          app:showAsAction="always"/>

    <item android:title="@string/menu_archive_chat"
          android:id="@+id/menu_archive_selected"
          android:icon="@drawable/ic_archive_white_24dp"
          app:showAsAction="always"/>

    <item android:title="@string/menu_delete_chat"
          android:id="@+id/menu_delete_selected"
          android:icon="?menu_trash_icon"
          app:showAsAction="always" />

    <item android:title="@string/menu_mute"
          android:id="@+id/menu_mute_selected"
          app:showAsAction="never"/>

    <item android:title="@string/mark_as_read"
          android:id="@+id/menu_marknoticed_selected"
          app:showAsAction="never"/>

    <item android:title="@string/add_to_home_screen"
          android:id="@+id/menu_add_to_home_screen"
          app:showAsAction="never"/>

    <item android:title="@string/menu_select_all"
          android:id="@+id/menu_select_all"
          app:showAsAction="never"/>

</menu>
