<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory android:title="@string/pref_communication">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_read_receipts"
            android:summary="@string/pref_read_receipts_explain"
            android:title="@string/pref_read_receipts" />

        <Preference
            android:key="preference_category_blocked"
            android:title="@string/pref_blocked_contacts" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_chats">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_enter_sends"
                android:summary="@string/pref_enter_sends_explain"
                android:title="@string/pref_enter_sends"/>

        <ListPreference
            android:key="pref_compression"
            android:title="@string/pref_outgoing_media_quality"
            android:dependency="pref_compression"
            android:entries="@array/pref_compression_entries"
            android:entryValues="@array/pref_compression_values"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_email_interaction_title">

        <ListPreference
            android:key="pref_show_emails"
            android:title="@string/pref_show_emails"
            android:dependency="pref_show_emails"
            android:entries="@array/pref_show_emails_entries"
            android:entryValues="@array/pref_show_emails_values" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_other">
        <Preference android:key="pref_backup"
            android:title="@string/pref_backup"
            android:summary="@string/pref_backup_explain"/>
    </PreferenceCategory>
    <!--
    <PreferenceCategory android:key="message_trimming" android:title="@string/pref_trim_headline">
        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_trim_threads"
            android:summary="@string/pref_trim_option_explain"
            android:title="@string/pref_trim_option" />

        <EditTextPreference android:defaultValue="500"
                            android:key="pref_trim_length"
                            android:title="@string/pref_trim_length_limit"
                            android:inputType="number"
                            android:dependency="pref_trim_threads" />

        <Preference android:key="pref_trim_now"
                    android:title="@string/pref_trim_now_button"
                    android:dependency="pref_trim_threads" />
    </PreferenceCategory>
    -->

</PreferenceScreen>
