<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/menu_reply"
          android:id="@+id/menu_context_reply"
          android:icon="?menu_reply_icon"
          app:showAsAction="always" />

    <item android:title="@string/menu_message_details"
          android:id="@+id/menu_context_details"
          android:icon="?menu_info_icon"
          app:showAsAction="always" />

    <item android:title="@string/menu_delete_messages"
        android:id="@+id/menu_context_delete_message"
        android:icon="?menu_trash_icon"
        app:showAsAction="always" />

    <item android:title="@string/menu_share"
        android:id="@+id/menu_context_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always" />

    <item android:title="@string/menu_copy_to_clipboard"
          android:id="@+id/menu_context_copy"
          android:icon="?menu_copy_icon"
          app:showAsAction="always" />

    <item android:title="@string/menu_export_attachment"
        android:id="@+id/menu_context_save_attachment"
        android:visible="false"
        android:icon="?menu_save_icon"
        app:showAsAction="always" />

    <item android:title="@string/menu_forward"
          android:id="@+id/menu_context_forward"
          android:icon="?menu_forward_icon"
          app:showAsAction="always" />

    <item android:title="@string/reply_privately"
        android:id="@+id/menu_context_reply_privately"
        app:showAsAction="never" />
</menu>
