<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item android:title="@string/search"
        android:id="@+id/menu_search_chat"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|never" />

    <item android:title="@string/back"
        android:id="@+id/menu_search_up"
        android:icon="@drawable/ic_search_up"
        android:visible="false"
        app:showAsAction="always"/>

    <item android:title="@string/next"
        android:id="@+id/menu_search_down"
        android:icon="@drawable/ic_search_down"
        android:visible="false"
        app:showAsAction="always"/>

    <item android:title="@string/menu_mute"
        android:id="@+id/menu_mute_notifications"/>

    <item android:title="@string/menu_view_profile"
          android:id="@+id/menu_profile"/>

    <item android:title="@string/menu_add_attachment"
          android:id="@+id/menu_add_attachment" />

    <item android:id="@+id/menu_show_map"
          android:title="@string/menu_show_map"
          android:icon="?menu_map_icon"
          app:showAsAction="ifRoom" />

</menu>
