<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <org.thoughtcrime.securesms.preferences.widgets.ProfilePreference
            android:key="preference_category_profile"/>

    <Preference android:key="preference_category_notifications"
                android:title="@string/pref_notifications"
                android:icon="@drawable/ic_notifications_24dp"/>

    <Preference android:key="preference_category_app_protection"
                android:title="@string/pref_privacy"
                android:icon="@drawable/ic_security_24dp"/>

    <Preference android:key="preference_category_appearance"
                android:title="@string/pref_appearance"
                android:icon="@drawable/ic_brightness_6_24dp"/>

    <Preference android:key="preference_category_chats"
                android:title="@string/pref_chats_and_media"
                android:icon="@drawable/ic_forum_24dp"/>

    <Preference android:key="preference_category_advanced"
                android:title="@string/menu_advanced"
                android:icon="@drawable/ic_advanced_24dp"/>

    <Preference android:key="preference_category_invite"
                android:title="@string/menu_invite"
                android:icon="@drawable/ic_invite_24dp"/>

    <Preference android:key="preference_category_help"
                android:title="@string/menu_help"
                android:icon="@drawable/ic_help_24dp"/>

</PreferenceScreen>
