<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
            android:key="pref_theme"
            android:title="@string/pref_theme"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:defaultValue="light"/>

    <org.thoughtcrime.securesms.preferences.widgets.SignalPreference
        android:key="pref_chat_background"
        android:title="@string/pref_background"/>

    <ListPreference
            android:key="pref_language"
            android:title="@string/pref_language"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="zz"/>

</PreferenceScreen>
