<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_messages">

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
                            android:key="pref_key_enable_notifications"
                            android:title="@string/pref_notifications"
                            android:defaultValue="true" />

        <org.thoughtcrime.securesms.preferences.widgets.SignalPreference
                android:dependency="pref_key_enable_notifications"
                android:key="pref_key_ringtone"
                android:title="@string/pref_sound"
                android:persistent="false"
                android:defaultValue="content://settings/system/notification_sound" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
                            android:dependency="pref_key_enable_notifications"
                            android:key="pref_key_vibrate"
                            android:defaultValue="true"
                            android:title="@string/pref_vibrate"/>

        <org.thoughtcrime.securesms.preferences.widgets.LEDColorListPreference
            android:key="pref_led_color"
            android:defaultValue="purple"
            android:title="@string/pref_led_color"
            android:dependency="pref_key_enable_notifications"
            android:entries="@array/pref_led_color_entries"
            android:entryValues="@array/pref_led_color_values" />

        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference
            android:key="pref_led_blink"
            android:defaultValue="500,2000"
            android:title="@string/pref_led_pattern"
            android:dependency="pref_led_color"
            android:entries="@array/pref_led_blink_pattern_entries"
            android:entryValues="@array/pref_led_blink_pattern_values" />

        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
                            android:key="pref_key_inthread_notifications"
                            android:title="@string/pref_in_chat_sounds"
                            android:dependency="pref_key_enable_notifications"
                            android:defaultValue="true" />

        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference
                android:key="pref_repeat_alerts"
                android:defaultValue="0"
                android:title="@string/pref_repeat_notify"
                android:dependency="pref_key_enable_notifications"
                android:entries="@array/pref_repeat_alerts_entries"
                android:entryValues="@array/pref_repeat_alerts_values" />

        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference
                android:key="pref_notification_privacy"
                android:title="@string/pref_notifications_show"
                android:dependency="pref_key_enable_notifications"
                android:defaultValue="all"
                android:entries="@array/pref_notification_privacy_entries"
                android:entryValues="@array/pref_notification_privacy_values"/>

        <org.thoughtcrime.securesms.preferences.widgets.SignalListPreference
                android:key="pref_notification_priority"
                android:title="@string/pref_notifications_priority"
                android:dependency="pref_key_enable_notifications"
                android:defaultValue="1"
                android:entries="@array/pref_notification_priority_entries"
                android:entryValues="@array/pref_notification_priority_values"/>
    </PreferenceCategory>

</PreferenceScreen>
