<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="32dp"
      android:gravity="center_horizontal">

    <Button
        style="@style/ButtonSecondary"
        android:id="@+id/use_other_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/instant_onboarding_other_server"/>

    <Button
        style="@style/ButtonSecondary"
        android:id="@+id/scan_qr_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/scan_invitation_code"/>

    <Button
        style="@style/ButtonSecondary"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/manual_account_setup_option"/>

  </LinearLayout>

</ScrollView>
